@@ -7,6 +7,7 @@
 * Orbital: Don't void $0 auths for Verify [javierpedrozaing] #2487
 * StripePI: Enable Apple Pay and Google Pay payment methods [gasb150] #4252
 * PaySafe: Update `unstore` method and authorization for redact [ajawadmirza] #4294
+* CyberSource: Add `national_tax_indicator` fields in authorize and purchase [ajawadmirza] #4299
 
 == Version 1.125.0 (January 20, 2022)
 * Wompi: support gateway [therufs] #4173
